# hackathon_hack_moscow_2018

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_and_run  config.json  config_example.json  launcher.cpp
algorithm_manager/: CMakeLists.txt  algorithm.h  algorithm_manager.cpp  algorithm_manager.h  example.cpp
algorithm_manager/algorithms/hasher/: hasher.h
algorithm_manager/algorithms/levenshtein/: levenshtein.h
algorithm_manager/algorithms/lib/dbscan/: point.h
algorithm_manager/algorithms/one_class/: one_class.h
algorithm_manger/: CMakeLists.txt  algorithm.h  algorithm_manager.h  example.cpp
arranger/: CMakeLists.txt  README.md  arranger.cpp  arranger.h  example.cpp  example_model.csv
base/: common.cmake  prediction_set.h
base/command_parser/: command_parser.cpp  command_parser.h  example.cpp
base/csv_parser/: csv_parser.cpp  csv_parser.h  example.cpp
base/dbscan/: CMakeLists.txt  README.md  dbscan.h  point.h
base/logger/: example.cpp  logger.cpp  logger.h
base/string_preprocessor/: CMakeLists.txt  string_preprocessor.cpp  string_preprocessor.h
clusterizator_manager/: CMakeLists.txt  clusterizator.h  clusterizator_manager.cpp  clusterizator_manager.h  example.cpp
clusterizator_manager/clusterizators/hasher/: hasher.h
clusterizator_manager/clusterizators/levenshtein/: levenshtein.h
clusterizator_manager/clusterizators/levenshtein_preprocessed/: levenshtein_preprocessed.h
clusterizator_manager/clusterizators/one_class/: one_class.h
clusterizator_manager/clusterizators/rand2/: rand2.h
data/: companies.csv
data/arranger_models/: presentation_model.csv
data/cached_prediction_sets/: ilon_mask.csv
data/web_crowler_cache/: xml_parser_res.txt
data_provider/: CMakeLists.txt  data_provider.cpp  data_provider.h  example.cpp
statistics/: CMakeLists.txt  clusterizator_statistics.h  statistics_manager.cpp  statistics_manager.h
web_crawler/: README.md
web_crawler/crawler/: const.py  main.py
web_crawler/xml_parser/: main.py
web_data_processor/: main.py
